--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>document</title>
+    <title>welcom to git</title>
   </head>
   <body>
     <script src="./src/script.js">
-      hello()
+      helloGitty()
     </script>
+    changet...
   </body>
 </html>
