final changes from index.html

--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <script src="./src/script.js">
       helloGitty()
     </script>
-    changet...
+    <div>set changes</div>
   </body>
 </html>
